--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -14,7 +14,7 @@
         <div class="dropdown">
             <button>Chats</button>
             <div class="content">
-                <a href="">Nouveau</a>
+                <a href="{{ path('new_cat') }}">Nouveau</a>
                 <a href="">Liste</a>
             </div>
         </div>
