--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,7 +1,7 @@
 :root {
     --nav-color: #5b5f97;
     --background-color: #FFFFFB;
-    --section-color: #B8B8D1;
-    --card-color: #FF6B6C;
+    --section-color: #efefef;
+    --card-color: #ebcfcf;
     --text-color: #393640;
 }
