--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -1,14 +1,13 @@
 {{ form_start(form) }}
     <p>
-        {{ form_label(form.title, 'Titre :', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_label(form.title, 'Titre ', {'label_attr': {'class': 'form-label'}}) }}
         {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
     </p>
     <p>
-        {{ form_label(form.text, 'Texte :', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_label(form.text, 'Texte ', {'label_attr': {'class': 'form-label'}}) }}
         {{ form_widget(form.text, {'attr': {'class': 'form-control'}}) }}
     </p>
     
-        
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn">{{ button_label|default('Télécharger') }}</button>
 {{ form_end(form) }}
