--- a/templates/cat/displaylost.html.twig
+++ b/templates/cat/displaylost.html.twig
@@ -11,24 +11,19 @@
 <div class="displaylost">
 
     <h2>liste des chats perdus sur la commune de {{ place }} </h2>
-    <article class="responsive">
     
+    <div class="slider">
     {% for cat in cats %}
         <div class="card">
             <div class="topcard">
                 <p>{{ cat.name }}</p>
-                 
                 <p>Déclaré perdu :<br>{{ cat.datelost ? cat.datelost|date('Y-m-d H:i:s') : '' }}</p>
-                
             </div>
             <img class="cat-picture" src="/pictures/{{ cat.picture }}"</img>
-            
             <p>Signes distinctifs :<br> {{ cat.details }}</p>
             <a href="{{ path("report", {"cat_id": cat.id }) }}" class="btn btn-warning">Signaler</a>
         </div>
     {% endfor %}
-  
-    </article>   
-</div>
+    </div>
 
 {% endblock %}
